<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.features.profile.ProfileFragment">

    <Button
        android:id="@+id/button_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_log_out"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/image_person"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/description_profile_photo"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/image_person"
        app:layout_constraintBottom_toTopOf="@id/text_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/text_full_name"
        app:layout_constraintBottom_toTopOf="@id/button_orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/orders"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_bag"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toTopOf="@id/button_favorites"
        />

    <Button
        android:id="@+id/button_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_favorite"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toTopOf="@id/button_shopin_wallet"
        />

    <Button
        android:id="@+id/button_shopin_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_wallet"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toTopOf="@id/button_comments"
        />

    <Button
        android:id="@+id/button_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_comment"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toTopOf="@id/button_help"
        />

    <Button
        android:id="@+id/button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_service"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_headset"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toTopOf="@id/button_about"
        />

    <Button
        android:id="@+id/button_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_shopin"
        android:textAlignment="textStart"
        android:includeFontPadding="false"
        app:icon="@drawable/ic_info"
        app:iconPadding="16dp"
        style="@style/Widget.Material3.Button.TonalButton"

        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>