<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	android:background="@color/md_theme_light_primary"
	tools:context=".presentation.on_boarding.OnBoardingFragment">

	<Button
		android:id="@+id/button_skip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:text="@string/skip"
		android:textColor="@color/white"
		style="@style/Widget.Material3.Button.TextButton.Snackbar"

		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/view_pager"
		android:layout_width="0dp"
		android:layout_height="0dp"

		app:layout_constraintTop_toBottomOf="@id/button_skip"
		app:layout_constraintBottom_toTopOf="@id/button_back"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<Button
		android:id="@+id/button_back"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/back"
		android:textColor="@color/white"
		style="@style/Widget.Material3.Button.TextButton.Snackbar"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>

	<Button
		android:id="@+id/button_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/next"
		android:textColor="@color/white"
		style="@style/Widget.Material3.Button.TextButton.Snackbar"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>