<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingHorizontal="16dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_layout_sign_in_email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/email"
		style="@style/Widget.Shopin.InputLayout"

		app:layout_constraintTop_toTopOf="parent">

	<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/edit_text_sign_in_email"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_layout_sign_in_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:hint="@string/password"
		app:passwordToggleEnabled="true"
		style="@style/Widget.Shopin.InputLayout"

		app:layout_constraintTop_toBottomOf="@id/input_layout_sign_in_email">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/edit_text_sign_in_password"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			/>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_sign_in"
        android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/sign_in"

		app:layout_constraintTop_toBottomOf="@id/input_layout_sign_in_password"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>